--- a/compose.yaml
+++ b/compose.yaml
@@ -12,7 +12,7 @@ services:
       DOCKER_INFLUXDB_INIT_USERNAME: admin
       DOCKER_INFLUXDB_INIT_PASSWORD: password
       DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: my_super_secret_token
-      DOCKER_INFLUXDB_INIT_ORG: docs
+      DOCKER_INFLUXDB_INIT_ORG: bookmark
       DOCKER_INFLUXDB_INIT_BUCKET: home
     # secrets:
     #   - influxdb2-admin-username
