--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
+IS_DEBUG=true
+
 INFLUXDB_URL=http://localhost:8086
 INFLUXDB_TOKEN=my_super_secret_token
 INFLUXDB_BUCKET=home
 INFLUXDB_ORG=bookmark
+
+#MONGODB_URL=mongodb://localhost:27017
+MONGODB_URL=mongodb://root:password@localhost:27017/bookmark?authSource=admin
+MONGODB_DB=bookmark
+MONGODB_COLLECTION=entity
