--- a/compose.yaml
+++ b/compose.yaml
@@ -25,6 +25,17 @@ services:
       - type: volume
         source: influxdb2-config
         target: /etc/influxdb2
+  mongo:
+    image: mongo:8.0.4
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+    ports:
+      - 27017:27017
+    volumes:
+      - mongo-data:/data/db
+      - mongo-config:/data/configdb
 # secrets:
 #   influxdb2-admin-username:
 #     file: ~/.env.influxdb2-admin-username
@@ -35,3 +46,5 @@ services:
 volumes:
   influxdb2-data:
   influxdb2-config:
+  mongo-data:
+  mongo-config:
