add postgres, refactoring

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 IS_DEBUG=true
 
+# Args
+URLS=https://www.google.co.jp/,https://chatgpt.com/
+
+# Database
+POSTGRES_URL=postgresql://postgres:password@localhost:5432/bookmark?sslmode=disable
+
 INFLUXDB_URL=http://localhost:8086
 INFLUXDB_TOKEN=my_super_secret_token
 INFLUXDB_BUCKET=home
