--- a/tools/sqlc/sqlc.yml
+++ b/tools/sqlc/sqlc.yml
@@ -10,5 +10,5 @@ sql:
     gen:
       go:
         package: "sqlcgen"
-        out: "../pkg/storage/rdb/sqlcgen"
+        out: "../../pkg/storage/rdb/sqlcgen"
         sql_package: "pgx/v5"
