--- a/tools/sqlfluff/Makefile
+++ b/tools/sqlfluff/Makefile
@@ -6,13 +6,13 @@ PWD := $(shell pwd)
 build-sqlfluff-image:
 	docker build --progress=plain -t $(SQL_LINT_IMAGE_NAME) .
 
-# format 実行例
+# format
 # e.g. make format SQL=postgres_example.sql
 .PHONY: format-sql
 format-sql:
 	docker run --rm -v $(PWD):/workspace $(SQL_LINT_IMAGE_NAME) fix /workspace/$(SQL)
 
-# lint 実行例
+# lint
 # e.g make lint SQL=postgres_example.sql
 .PHONY: lint-sql
 lint-sql:
