--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,13 @@ IS_DEBUG=true
 # Args
 URLS=https://www.google.co.jp/,https://chatgpt.com/
 
+# Tracer
+TRACER=jaeger # jaeger_http, jaeger_grpc, datadog, none
+TRACER_SERVICE_NAME=bookmark
+TRACER_VERSION=1.0
+
 # Database
+DB_MAX_CONNECTIONS=100
 POSTGRES_URL=postgresql://postgres:password@localhost:5432/bookmark?sslmode=disable
 
 INFLUXDB_URL=http://localhost:8086
@@ -15,3 +21,6 @@ INFLUXDB_ORG=bookmark
 MONGODB_URL=mongodb://root:password@localhost:27017/bookmark?authSource=admin
 MONGODB_DB=bookmark
 MONGODB_COLLECTION=entity
+
+# Fetcher
+MAX_WORKERS=100
