--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ IS_DEBUG=true
 # Args
 URLS=https://www.google.co.jp/,https://chatgpt.com/
 
+# Logger
+LOGGER=console # json, console, none
+
 # Tracer
 TRACER=jaeger # jaeger_http, jaeger_grpc, datadog, none
 TRACER_SERVICE_NAME=bookmark
