--- a/compose.yaml
+++ b/compose.yaml
@@ -48,7 +48,6 @@ services:
         target: /etc/influxdb2
 
   # https://www.jaegertracing.io/docs/1.63/getting-started/
-  # run by `docker compose --profile monitoring up -d`
   jaeger:
     image: jaegertracing/all-in-one:1.63.0
     # profiles:
@@ -56,9 +55,9 @@ services:
     environment:
       - COLLECTOR_OTLP_ENABLED=true
     ports:
-      - "16686:16686" # ダッシュボード用のポート
-      - "4318:4318" # exporterの利用するプロトコル: HTTP
-      - "4317:4317" # exporterの利用するプロトコル: gRPC
+      - "16686:16686" # for dashboard
+      - "4318:4318" # exporter for HTTP
+      - "4317:4317" # exporter for gRPC
 
 volumes:
   pgdata:
